--- a/formuladb-env/frmdb-apps/themes/_nav.html
+++ b/formuladb-env/frmdb-apps/themes/_nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light" data-frmdb-fragment="_nav.html" data-frmdb-highlight-ignore>
+<nav class="navbar navbar-light" data-frmdb-fragment="_nav.html">
     <a class="navbar-brand" href="index.html">
         <i class="fas fa-image" style="color: var(--primary)"></i>
         <span>BrandName</span>
