lang change with URL state working

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -37,28 +37,7 @@
             </div>
 
             <frmdb-theme-customizer></frmdb-theme-customizer>
-
-            <div class="btn-group mr-3" role="group">
-                <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
-                    <button class="btn" id="frmdb-editor-i18n-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="flag-icon flag-icon-gb"></i>
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="frmdb-editor-i18n-select">
-                    </div>
-                </div>
-                <!-- <div class="btn-group mr-3 dropdown frmdb-dropdown-hover" role="menu">
-                    <button class="btn btn-outline" id="frmdb-editor-app-version-select" type="button" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                        1
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="frmdb-editor-app-version-select">
-                        <a class="dropdown-item" title="Version 1" data-frmdb-action="viewport-mobile">Version 1</a>
-                        <a class="dropdown-item" title="Version 2" data-frmdb-action="viewport-mobile">Version 2</a>
-                        <a class="dropdown-item" title="Version 3" data-frmdb-action="viewport-mobile">Version 3</a>
-                        <a class="dropdown-item" title="Version 4" data-frmdb-action="viewport-mobile">Version 4</a>
-                    </div>
-                </div> -->
-            </div>
+            <frmdb-i18n-customizer></frmdb-i18n-customizer>
 
             <div class="btn-group mr-3" role="group">
                 <button class="btn btn-light" title="Preview" id="preview-btn" type="button" data-toggle="button" aria-pressed="false"
