frmdb-icon working

--- a/formuladb-env/frmdb-apps/themes/components-nav.html
+++ b/formuladb-env/frmdb-apps/themes/components-nav.html
@@ -1,11 +1,11 @@
 <nav>
     <ul class="nav flex-column">
-        <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder">Landing Page</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Landing Page</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/landing-page.html" >Cover</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/landing-page.html#thememediacards" >Theme Media Cards</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/landing-page.html#mediasectionparallax" >Media Section Parallax</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/landing-page.html#themeiconcards" >Theme Icon Cards</a></li>
-        <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder">Basic Elements</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Basic Elements</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#navbars" >Navbars</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#buttons" >Buttons</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#typography" >Typography</a></li>
@@ -16,11 +16,12 @@
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#progress" >Progress</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#containers" >Containers</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/elements.html#dialogs" >Dialogs</a></li>
-        <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder">Components</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/icons.html" >Icons</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Components</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/components.html#carousel" >Carousel</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/components.html#pagination" >Pagination</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/components.html#infinite-scroll" >Infinite Scroll</a></li>
-        <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder">Blocks</a></li>
+        <li class="nav-item"><a class="pl-0 nav-link disabled font-weight-bolder text-dark">Blocks</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/blocks.html#data-grid" >Data Grid</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/blocks.html#charts" >Charts</a></li>
         <li class="nav-item"><a class="pl-0 nav-link" target="frmdb-theme-page" href="../../frmdb-apps/themes/blocks.html#google-maps" >Google Maps</a></li>
