--- a/formuladb-env/frmdb-apps/themes/icons.html
+++ b/formuladb-env/frmdb-apps/themes/icons.html
@@ -5,19 +5,25 @@
     <title>FormulaDB Icons</title>
 </head>
 
-<body>
+<body class="px-2">
 
-    <div class="container" data-offset="0">
-        <button type="button" class="btn btn-primary"><frmdb-icon href=""></frmdb-icon></button>
-        <button type="button" class="btn btn-secondary">Secondary</button>
-        <button type="button" class="btn btn-success">Success</button>
-        <button type="button" class="btn btn-info">Info</button>
-        <button type="button" class="btn btn-warning">Warning</button>
-        <button type="button" class="btn btn-danger">Danger</button>
-        <button type="button" class="btn btn-link">Link</button>
+    <h1>Icon Sizes and Colors</h1>
+    <div class="container-fluid d-flex justify-content-between">
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-primary sz-1"></frmdb-icon>
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-secondary sz-1p2"></frmdb-icon>
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-success sz-1p5"></frmdb-icon>
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-info sz-2"></frmdb-icon>
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-warning sz-3"></frmdb-icon>
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-danger sz-4"></frmdb-icon>
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-light sz-5"></frmdb-icon>
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-dark sz-6"></frmdb-icon>
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-primary sz-7"></frmdb-icon>
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-secondary sz-8"></frmdb-icon>
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-success sz-9"></frmdb-icon>
+        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-info sz-10"></frmdb-icon>
     </div>
 
-    <div data-frmdb-fragment="_footer.html" src="_footer.html"></div>
+    <h1>Available Icons</h1>
 
     <div data-frmdb-fragment="_scripts.html"></div>
 </body>
