fix icon attr name

--- a/formuladb-env/frmdb-apps/themes/landing-page.html
+++ b/formuladb-env/frmdb-apps/themes/landing-page.html
@@ -173,7 +173,7 @@
                 </div>
                 <div class="card frmdb-t-card-icon">
                     <h4>
-                        <i class="fa fa-glass-martini-alt"></i> Drinks
+                        <frmdb-icon name="fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor"></frmdb-icon> Drinks
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
