--- a/formuladb-env/frmdb-apps/themes/icons.html
+++ b/formuladb-env/frmdb-apps/themes/icons.html
@@ -9,18 +9,18 @@
 
     <h1>Icon Sizes and Colors</h1>
     <div class="container-fluid d-flex justify-content-between">
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-primary sz-1"></frmdb-icon>
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-secondary sz-1p2"></frmdb-icon>
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-success sz-1p5"></frmdb-icon>
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-info sz-2"></frmdb-icon>
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-warning sz-3"></frmdb-icon>
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-danger sz-4"></frmdb-icon>
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-light sz-5"></frmdb-icon>
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-dark sz-6"></frmdb-icon>
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-primary sz-7"></frmdb-icon>
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-secondary sz-8"></frmdb-icon>
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-success sz-9"></frmdb-icon>
-        <frmdb-icon href="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied.svg" class="text-info sz-10"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-primary sz-1"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-secondary sz-1p2"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-success sz-1p5"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-info sz-2"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-warning sz-3"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-danger sz-4"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-light sz-5"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-dark sz-6"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-primary sz-7"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-secondary sz-8"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-success sz-9"></frmdb-icon>
+        <frmdb-icon name="fontawesome-solid-smile-approve-emoticon-face-happy-rating-satisfied" class="text-info sz-10"></frmdb-icon>
     </div>
 
     <h1>Available Icons</h1>
