replaced icons with frmdb-icon

--- a/formuladb-env/frmdb-apps/themes/landing-page.html
+++ b/formuladb-env/frmdb-apps/themes/landing-page.html
@@ -148,26 +148,26 @@
             <div class="card-deck frmdb-cards-wrap-3">
                 <div class="card frmdb-t-card-icon">
                     <h4>
-                        <i class="fa fa-utensils"></i> Food
+                        <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Food
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </div>
                 <div class="card frmdb-t-card-icon">
                     <h4>
-                        <i class="fa fa-biking"></i> Sports
+                        <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon> Sports
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </div>
                 <div class="card frmdb-t-card-icon">
                     <h4>
-                        <i class="fa fa-car"></i> Auto
+                        <frmdb-icon name="fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle"></frmdb-icon> Auto
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </div>
                 <div class="card frmdb-t-card-icon">
                     <h4>
-                        <i class="fa fa-tv"></i> TV
+                        <frmdb-icon name="fontawesome-solid-tv-computer-display-monitor-television"></frmdb-icon> TV
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </div>
@@ -180,7 +180,7 @@
                 </div>
                 <div class="card frmdb-t-card-icon">
                     <h4>
-                        <i class="fa fa-building"></i> Building
+                        <frmdb-icon name="fontawesome-solid-building-apartment-business-city-company-office-work"></frmdb-icon> Building
                     </h4>
                     <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
                         tempus.</p>
