--- a/formuladb-env/frmdb-apps/Hotel_Booking/index.html
+++ b/formuladb-env/frmdb-apps/Hotel_Booking/index.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="card border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-car"></i> Rent a Car
+                        <i class="fa fa-car-auto"></i> Rent a Car
                     </h4>
                     <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                 </div>
