--- a/formuladb-env/frmdb-apps/Summer_Villa/index.html
+++ b/formuladb-env/frmdb-apps/Summer_Villa/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-car" style=""></i> Auto
+                        <i class="fa fa-car-auto" style=""></i> Auto
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
