icons to frmdb-icon

--- a/formuladb-env/frmdb-apps/Basic_Inventory/index.html
+++ b/formuladb-env/frmdb-apps/Basic_Inventory/index.html
@@ -103,7 +103,7 @@
 
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                        <i class="fa fa-bars"></i>
+                        <frmdb-icon name="icons/svg/fontawesome-solid-bars-checklist-drag-hamburger-list-menu-nav-navigation-ol-reorder-settings-todo-ul.svg"></frmdb-icon>
                     </button>
 
                     <!-- Topbar Search -->
