--- a/formuladb-env/frmdb-apps/Click_Hostel/index.html
+++ b/formuladb-env/frmdb-apps/Click_Hostel/index.html
@@ -171,39 +171,39 @@
             <div class="card-deck frmdb-cards-wrap-3">
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-utensils"></i> breakfast
+                        <frmdb-icon name="icons/svg/fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant.svg"></frmdb-icon> breakfast
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-biking"></i>&nbsp;rent bikes
+                        <frmdb-icon name="icons/svg/fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel.svg"></frmdb-icon>&nbsp;rent bikes
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-mug-hot"></i>&nbsp;bistro cafe
+                        <frmdb-icon name="icons/svg/fontawesome-solid-mug-hot-caliente-cocoa-coffee-cup-drink-holiday-hot_chocolate-steam-tea-warmth.svg"></frmdb-icon>&nbsp;bistro cafe
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-wifi"></i> free wifi
+                        <frmdb-icon name="icons/svg/fontawesome-solid-wifi-connection-hotspot-internet-network-wireless.svg"></frmdb-icon> free wifi
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-gamepad"></i> gaming room
+                        <frmdb-icon name="icons/svg/fontawesome-solid-gamepad-arcade-controller-d-pad-joystick-video-video_game.svg"></frmdb-icon> gaming room
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4 data-i18n="en">
-                        <i class="fa fa-money-check-alt"></i> budget option
+                        <frmdb-icon name="icons/svg/fontawesome-solid-money-check-alt-bank_check-buy-checkout-cheque-money-payment-price-purchase.svg"></frmdb-icon> budget option
                     </h4>
                     <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
                         tempus.</p>
