--- a/formuladb-env/frmdb-apps/Wellness_Services/index.html
+++ b/formuladb-env/frmdb-apps/Wellness_Services/index.html
@@ -70,39 +70,39 @@
             <div class="card-deck frmdb-cards-wrap-3">
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-utensils"></i> Food
+                        <frmdb-icon name="icons/svg/fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant.svg"></frmdb-icon> Food
                     </h4>
                     <p>Integer placerat id risus imperdiet molestie. Donec tempor a tellus at vehicula.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-biking"></i> Sports
+                        <frmdb-icon name="icons/svg/fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel.svg"></frmdb-icon> Sports
                     </h4>
                     <p>Maecenas tempor erat eget ornare vulputate. Praesent sem mauris, varius ornare mattis ac, iaculis eget neque.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-car-auto"></i> Auto
+                        <frmdb-icon name="icons/svg/fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle.svg"></frmdb-icon> Auto
                     </h4>
                     <p>Maecenas at maximus nisi, at porttitor libero. Morbi imperdiet, sem a maximus posuere, urna sem placerat libero, at accumsan nisi metus
                         eu nulla.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-tv"></i> TV
+                        <frmdb-icon name="icons/svg/fontawesome-solid-tv-computer-display-monitor-television.svg"></frmdb-icon> TV
                     </h4>
                     <p>In sodales feugiat pellentesque. Ut eget metus eget nunc commodo finibus. Cras mattis dolor sit amet lectus laoreet fermentum.</p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-glass-martini-alt"></i> Drinks
+                        <frmdb-icon name="icons/svg/fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor.svg"></frmdb-icon> Drinks
                     </h4>
                     <p>Aliquam dignissim et risus et sagittis. Donec eros nibh, finibus ut nulla vel, volutpat fermentum libero. Donec malesuada varius risus.
                     </p>
                 </div>
                 <div class="card frmdb-t-card-icon border-light p-4 bg-transparent">
                     <h4>
-                        <i class="fa fa-building"></i> Building
+                        <frmdb-icon name="icons/svg/fontawesome-solid-building-apartment-business-city-company-office-work.svg"></frmdb-icon> Building
                     </h4>
                     <p>Etiam odio augue, sagittis vel quam quis, ultricies mollis mi. Fusce elementum ipsum a vehicula vehicula. Nulla lacinia vel erat in
                         tempus.</p>
