--- a/formuladb-env/frmdb-apps/Hotel_Booking/index.html
+++ b/formuladb-env/frmdb-apps/Hotel_Booking/index.html
@@ -108,37 +108,37 @@
             <div class="card-deck frmdb-cards-wrap-3">
                 <div class="card border-light p-4 bg-transparent">
                     <h4>
-                        <frmdb-icon name="icons/svg/fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant.svg"></frmdb-icon> Restaurant
+                        <frmdb-icon name="fontawesome-solid-utensils-cutlery-dining-dinner-eat-food-fork-knife-restaurant"></frmdb-icon> Restaurant
                     </h4>
                     <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                 </div>
                 <div class="card border-light p-4 bg-transparent">
                     <h4>
-                        <frmdb-icon name="icons/svg/fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel.svg"></frmdb-icon> Sports CLub
+                        <frmdb-icon name="fontawesome-solid-biking-bicycle-bike-cycle-cycling-ride-wheel"></frmdb-icon> Sports CLub
                     </h4>
                     <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                 </div>
                 <div class="card border-light p-4 bg-transparent">
                     <h4>
-                        <frmdb-icon name="icons/svg/fontawesome-solid-swimmer-athlete-head-man-olympics-person-pool-water.svg"></frmdb-icon> Swimming Pool
+                        <frmdb-icon name="fontawesome-solid-swimmer-athlete-head-man-olympics-person-pool-water"></frmdb-icon> Swimming Pool
                     </h4>
                     <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                 </div>
                 <div class="card border-light p-4 bg-transparent">
                     <h4>
-                        <frmdb-icon name="icons/svg/fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle.svg"></frmdb-icon> Rent a Car
+                        <frmdb-icon name="fontawesome-solid-car-auto-automobile-sedan-transportation-travel-vehicle"></frmdb-icon> Rent a Car
                     </h4>
                     <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                 </div>
                 <div class="card border-light p-4 bg-transparent">
                     <h4>
-                        <frmdb-icon name="icons/svg/fontawesome-solid-dumbbell-exercise-gym-strength-weight-weight-lifting.svg"></frmdb-icon> Gym
+                        <frmdb-icon name="fontawesome-solid-dumbbell-exercise-gym-strength-weight-weight-lifting"></frmdb-icon> Gym
                     </h4>
                     <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                 </div>
                 <div class="card border-light p-4 bg-transparent">
                     <h4>
-                        <frmdb-icon name="icons/svg/fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor.svg"></frmdb-icon> Bar
+                        <frmdb-icon name="fontawesome-solid-glass-martini-alt-alcohol-bar-beverage-drink-liquor"></frmdb-icon> Bar
                     </h4>
                     <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                 </div>
